--- a/Code/Step-2/Step-2.Rmd
+++ b/Code/Step-2/Step-2.Rmd
@@ -127,23 +127,6 @@ head(toPlot_50_genes_PCA_gdata_probedata)
 ```
 
 ```{r}
-#  num_PC_gdata                      gene num_less_fdr num_less_bonferroni num_PC_probedata eqtl_fdr
-#1            5   CYYR1:ENSG00000166265.7            0                   0                5        0
-#2            5   RTDR1:ENSG00000100218.7            0                   0                5        0
-#3            5 CHAF1A:ENSG00000167670.11            4                   3                5        1
-#4            5   YWHAH:ENSG00000128245.9            0                   0                5        0
-#5            5  ABCG1:ENSG00000160179.13            0                   0                5        0
-#6            5     WIZ:ENSG00000011451.9            0                   0                5        0
-#  eqtl_bonferroni
-#1               0
-#2               0
-#3               1
-#4               0
-#5               0
-#6               0
-```
-
-```{r}
 saveRDS(toPlot_50_genes_PCA_gdata_probedata, "toPlot_50_genes_PCA_gdata_probedata_V4.RDS")
 
 toPlot_50_genes_PCA_gdata_probedata_average <- toPlot_50_genes_PCA_gdata_probedata %>% group_by(num_PC_gdata, num_PC_probedata) %>% summarise(average_sig_fdr = mean(eqtl_fdr), average_sig_bonferroni = mean(eqtl_bonferroni))
@@ -154,31 +137,19 @@ toPlot_50_genes_PCA_gdata_probedata_average$num_PC_probedata <- as.factor(toPlot
 head(toPlot_50_genes_PCA_gdata_probedata_average)
 ```
 
-```{r}
-# A tibble: 6 x 4
-# Groups:   num_PC_gdata [2]
-#  num_PC_gdata num_PC_probedata average_sig_fdr average_sig_bonferroni
-#  <fct>        <fct>                      <dbl>                  <dbl>
-#1 5            5                          0.100                  0.100
-#2 5            10                         0.100                  0.100
-#3 5            15                         0.100                  0.100
-#4 5            20                         0.100                  0.100
-#5 10           5                          0.300                  0.300
-#6 10           10                         0.100                  0.100
-```
 
 ```{r}
-jpeg("prop_of_genes_sig_on_50_genes_V4_fdr.jpg")
+png("prop_of_genes_sig_on_50_genes_V4_fdr.png")
 p <- ggplot(aes(x=num_PC_gdata, y = num_PC_probedata), data = toPlot_50_genes_PCA_gdata_probedata_average) + geom_tile(aes(fill=average_sig_fdr), color = "white") + scale_fill_gradient(low= "white", high = "steelblue", name = "Proportion of genes significant") 
 p +  ggtitle("Proportion of genes with a significant eQTM for 50 genes") + xlab("Number of PCs Adjusted for Gene Expression Data") + ylab("Number of PCs Adjusted for DNA Methylation Data")
 dev.off()
 ```
 
 ```{r}
-jpeg("prop_of_genes_sig_on_50_genes_V4_bonferroni.jpg")
+#png("/Users/lisa/STAT540/Repo_team_gene_heroes/images/Step 2/prop_of_genes_sig_on_50_genes_V4_bonferroni.png")
 p <- ggplot(aes(x=num_PC_gdata, y = num_PC_probedata), data = toPlot_50_genes_PCA_gdata_probedata_average) + geom_tile(aes(fill=average_sig_bonferroni), color = "white") + scale_fill_gradient(low= "white", high = "steelblue", name = "Proportion of genes significant") 
 p +  ggtitle("Proportion of genes with a significant eQTM for 50 genes") + xlab("Number of PCs Adjusted for Gene Expression Data") + ylab("Number of PCs Adjusted for DNA Methylation Data")
-dev.off()
+#dev.off()
 
 ```
 
@@ -194,9 +165,9 @@ cum_var_explained_gdata<-(as.data.frame(cumsum(pc_svd_genes$d^2/sum(pc_svd_genes
 cum_var_explained_gdata$pcs<-c(1:nrow(cum_var_explained_gdata))
 colnames(cum_var_explained_gdata)<- c("cum_var_explained","PCs")
 
-png("cum_var_explained_50_V4_gdata.png")
+#png("/Users/lisa/STAT540/Repo_team_gene_heroes/images/Step 2/cum_var_explained_50_V4_gdata.png")
 ggplot(aes( x=PCs, y=cum_var_explained), data = cum_var_explained_gdata[1:30,]) + geom_point(size=1) + geom_line() + ggtitle("Cumulative variance explained by PCs on Gene Expression Data Data") + xlab("Number of PCs") + ylab("Variance Explained") + xlim(0,30) + ylim(0,1)
-dev.off()
+#dev.off()
 ```
 
 From the above, we see when 30 PCs are adjusted for gene expression data, a total of 72% variance was accounted for. 
@@ -207,9 +178,9 @@ cum_var_explained_probe<-(as.data.frame(cumsum(pc_svd_probes$d^2/sum(pc_svd_prob
 cum_var_explained_probe$pcs<-c(1:nrow(cum_var_explained_probe))
 colnames(cum_var_explained_probe)<- c("cum_var_explained","PCs")
 
-png("cum_var_explained_50_V4_probe.png")
+#png("/Users/lisa/STAT540/Repo_team_gene_heroes/images/Step 2/cum_var_explained_50_V4_probe.png")
 ggplot(aes( x=PCs, y=cum_var_explained), data = cum_var_explained_probe[1:30,]) + geom_point(size=1) + geom_line() + ggtitle("Cumulative variance explained by PCs on DNA Methylation Data") + xlab("Number of PCs") + ylab("Variance Explained") + xlim(0,30) + ylim(0,1)
-dev.off()
+#dev.off()
 ```
 
 #Correlation tests based on the PC adjusted data sets
@@ -236,9 +207,9 @@ lapply_results_PCA <- do.call(rbind,results_PCA)
 lapply_results_PCA$adjusted.pvalue <- p.adjust(lapply_results_PCA$pvalue, method="fdr") #adjusting for fdr
 saveRDS(lapply_results_PCA,"cor_test_results_PCA_lapply_V4.rds")
 
-png("histogram_pvalue_V4.png")
+#png("/Users/lisa/STAT540/Repo_team_gene_heroes/images/Step 2/histogram_pvalue_V4.png")
 ggplot(aes(pvalue), data = lapply_results_PCA) + geom_histogram(bins=500) + ggtitle("Histogram of p-value on correlation tests")
-dev.off()
+#dev.off()
 
 summary(lapply_results_PCA$adjusted.pvalue)
 min(lapply_results_PCA$adjusted.pvalue)
@@ -255,7 +226,7 @@ We will plot the pvalues based on the number of adjusted PCs in the DNA methylat
 
 ```{r}
 results_by_gene <- function(gene){
-  results_pca_CYP2D6 = lapply(n, function(i){
+  lapply(n, function(i){
     toLoop = which(dat[,gene] != 0) 
     out <- lapply(toLoop, function(j){
       data.frame(probe = rownames(probes_subjects)[j], 
@@ -271,7 +242,7 @@ results_by_gene <- function(gene){
 }
 
 results_by_probe <- function(gene){
-  results_pca_CYP2D6 = lapply(n, function(i){
+  lapply(n, function(i){
     toLoop = which(dat[,gene] != 0) 
     out <- lapply(toLoop, function(j){
       data.frame(probe = rownames(probes_subjects)[j], 
@@ -303,16 +274,18 @@ colnames(subjects_genes)[grep("APP",colnames(subjects_genes))]
 lapply_results_pca_AKT2_gdata <- do.call(rbind,results_by_gene("AKT2:ENSG00000105221.10"))
 toPlot_lapply_results_pca_AKT2_gdata  <- lapply_results_pca_AKT2_gdata  %>% melt(id="num_PC")
 
-png("gene_AKT2_gdata.png")
-ggplot(aes(x=num_PC, y=value, colour=variable), data = toPlot_lapply_results_pca_AKT2_gdata) + geom_point() + geom_line( ) + ggtitle("Number of significant eQTMs by number of PCs for AKT2 when gene data adjusted for 30 PCs") + xlab("Number of PCs") + ylab("Number of significant DNA probes") + scale_colour_discrete(name = "Type of Threshold", breaks=c("num_less_pvalue", "num_less_fdr", "num_less_bonferroni"), labels=c("P-value < 0.1", "FDR < 0.1", "Bonferroni < 0.1"))
-dev.off()
+#png("/Users/lisa/STAT540/Repo_team_gene_heroes/images/Step 2/gene_AKT2_gdata.png")
+ggplot(aes(x=num_PC, y=value, colour=variable), data = toPlot_lapply_results_pca_AKT2_gdata) + geom_point() + geom_line( ) + ggtitle("Number of significant eQTMs on AKT2 when gene data adjusted for 30 PCs") + xlab("Number of PCs") + ylab("Number of significant DNA probes") + scale_colour_discrete(name = "Type of Threshold", breaks=c("num_less_pvalue", "num_less_fdr", "num_less_bonferroni"), labels=c("P-value < 0.1", "FDR < 0.1", "Bonferroni < 0.1"))
+#dev.off()
+```
 
+```{r}
 lapply_results_pca_AKT2_probe <- do.call(rbind,results_by_probe("AKT2:ENSG00000105221.10"))
 toPlot_lapply_results_pca_AKT2_probe  <- lapply_results_pca_AKT2_probe  %>% melt(id="num_PC")
 
-png("gene_AKT2_probes.png")
-ggplot(aes(x=num_PC, y=value, colour=variable), data = toPlot_lapply_results_pca_AKT2_probe) + geom_point() + geom_line( ) + ggtitle("Number of significant eQTMs by number of PCs for AKT2 when probe data adjusted for 5 PCs") + xlab("Number of PCs") + ylab("Number of significant DNA probes") + scale_colour_discrete(name = "Type of Threshold", breaks=c("num_less_pvalue", "num_less_fdr", "num_less_bonferroni"), labels=c("P-value < 0.1", "FDR < 0.1", "Bonferroni < 0.1"))
-dev.off()
+#png("/Users/lisa/STAT540/Repo_team_gene_heroes/images/Step 2/gene_AKT2_probes.png")
+ggplot(aes(x=num_PC, y=value, colour=variable), data = toPlot_lapply_results_pca_AKT2_probe) + geom_point() + geom_line( ) + ggtitle("Number of significant eQTMs on AKT2 when probe data adjusted for 5 PCs") + xlab("Number of PCs") + ylab("Number of significant DNA probes") + scale_colour_discrete(name = "Type of Threshold", breaks=c("num_less_pvalue", "num_less_fdr", "num_less_bonferroni"), labels=c("P-value < 0.1", "FDR < 0.1", "Bonferroni < 0.1"))
+#dev.off()
 ```
 
 There seems to be nothing showing in AKT2 gene, let's try another gene that is related to Alzheimer's disease. 
@@ -323,16 +296,17 @@ There seems to be nothing showing in AKT2 gene, let's try another gene that is r
 lapply_results_pca_APP_gdata <- do.call(rbind,results_by_gene("APP:ENSG00000142192.14"))
 toPlot_lapply_results_pca_APP_gdata  <- lapply_results_pca_APP_gdata  %>% melt(id="num_PC")
 
-png("gene_APP_gdata.png")
-ggplot(aes(x=num_PC, y=value, colour=variable), data = toPlot_lapply_results_pca_APP_gdata) + geom_point() + geom_line( ) + ggtitle("Number of significant eQTMs by number of PCs for APP when gene data adjusted for 30 PCs") + xlab("Number of PCs") + ylab("Number of significant DNA probes") + scale_colour_discrete(name = "Type of Threshold", breaks=c("num_less_pvalue", "num_less_fdr", "num_less_bonferroni"), labels=c("P-value < 0.1", "FDR < 0.1", "Bonferroni < 0.1"))
-dev.off()
-
+#png("/Users/lisa/STAT540/Repo_team_gene_heroes/images/Step 2/gene_APP_gdata.png")
+ggplot(aes(x=num_PC, y=value, colour=variable), data = toPlot_lapply_results_pca_APP_gdata) + geom_point() + geom_line( ) + ggtitle("Number of significant eQTMs for APP on gene data adjusted for 30 PCs") + xlab("Number of PCs") + ylab("Number of significant DNA probes") + scale_colour_discrete(name = "Type of Threshold", breaks=c("num_less_pvalue", "num_less_fdr", "num_less_bonferroni"), labels=c("P-value < 0.1", "FDR < 0.1", "Bonferroni < 0.1"))
+#dev.off()
+```
+```{r}
 lapply_results_pca_APP_probe <- do.call(rbind,results_by_probe("APP:ENSG00000142192.14"))
 toPlot_lapply_results_pca_APP_probe  <- lapply_results_pca_APP_probe  %>% melt(id="num_PC")
 
-png("gene_APP_probes.png")
-ggplot(aes(x=num_PC, y=value, colour=variable), data = toPlot_lapply_results_pca_APP_probe) + geom_point() + geom_line( ) + ggtitle("Number of significant eQTMs by number of PCs for APP when probe data adjusted for 5 PCs") + xlab("Number of PCs") + ylab("Number of significant DNA probes") + scale_colour_discrete(name = "Type of Threshold", breaks=c("num_less_pvalue", "num_less_fdr", "num_less_bonferroni"), labels=c("P-value < 0.1", "FDR < 0.1", "Bonferroni < 0.1"))
-dev.off()
+#png("/Users/lisa/STAT540/Repo_team_gene_heroes/images/Step 2/gene_APP_probes.png")
+ggplot(aes(x=num_PC, y=value, colour=variable), data = toPlot_lapply_results_pca_APP_probe) + geom_point() + geom_line( ) + ggtitle("Number of significant eQTMs by number of PCs on APP when probe data adjusted for 5 PCs") + xlab("Number of PCs") + ylab("Number of significant DNA probes") + scale_colour_discrete(name = "Type of Threshold", breaks=c("num_less_pvalue", "num_less_fdr", "num_less_bonferroni"), labels=c("P-value < 0.1", "FDR < 0.1", "Bonferroni < 0.1"))
+#dev.off()
 ```
 
 Nothing much is going on in any of these genes, we will now by look at genes that have multiple significant eQTMs.
@@ -342,44 +316,45 @@ filtered_cor_test_results <- lapply_results_PCA[lapply_results_PCA$adjusted.pval
 summary_cor_test_results <- filtered_cor_test_results %>% group_by(gene) %>% count()
 summary_cor_test_results[order(-summary_cor_test_results$n),]
 ```
-```{r}
-# Groups:   gene [610]
-#   gene                             n
-#   <fct>                        <int>
-# 1 CYP2D6:ENSG00000100197.16       19
-# 2 C21orf56:ENSG00000160284.10     18
-# 3 NLRP2:ENSG00000022556.11        18
-# 4 CSDC2:ENSG00000172346.9         17
-# 5 L3MBTL1:ENSG00000185513.9       17
-# 6 NKAIN4:ENSG00000101198.10       17
-# 7 ELL:ENSG00000105656.5           16
-# 8 AC016629.2:ENSG00000213753.4    16
-# 9 POLR3H:ENSG00000100413.12       15
-#10 C22orf32:ENSG00000183172.6      15
-```
 
 #Looking at individual genes which contain multiple significant probes
 
 ##CYP2D6 - a gene that contains multiple significant probes
 
 ```{r}
-lapply_results_pca_CYP2D6 <- do.call(rbind,results_by_gene("CYP2D6:ENSG00000100197.16"))
-toPlot_lapply_results_pca_CYP2D6 <- lapply_results_pca_CYP2D6 %>% melt(id="num_PC")
+lapply_results_pca_CYP2D6_gdata <- do.call(rbind,results_by_gene("CYP2D6:ENSG00000100197.16"))
+toPlot_lapply_results_pca_CYP2D6_gdata  <- lapply_results_pca_CYP2D6_gdata  %>% melt(id="num_PC")
 
-png("gene_CYP2D6.png")
-ggplot(aes(x=num_PC, y=value, colour=variable), data = toPlot_lapply_results_pca_CYP2D6) + geom_point() + geom_line( ) + ggtitle("Number of significant eQTMs by number of PCs for CYP2D6") + xlab("Number of PCs") + ylab("Number of significant DNA probes") + scale_colour_discrete(name = "Type of Threshold", breaks=c("num_less_pvalue", "num_less_fdr", "num_less_bonferroni"), labels=c("P-value < 0.1", "FDR < 0.1", "Bonferroni < 0.1"))
-dev.off()
+#png("/Users/lisa/STAT540/Repo_team_gene_heroes/images/Step 2/gene_CYP2D6_gdata.png")
+ggplot(aes(x=num_PC, y=value, colour=variable), data = toPlot_lapply_results_pca_CYP2D6_gdata) + geom_point() + geom_line( ) + ggtitle("Number of significant eQTMs on CYP2D6 when gene data adjusted for 30 PCs") + xlab("Number of PCs") + ylab("Number of significant DNA probes") + scale_colour_discrete(name = "Type of Threshold", breaks=c("num_less_pvalue", "num_less_fdr", "num_less_bonferroni"), labels=c("P-value < 0.1", "FDR < 0.1", "Bonferroni < 0.1"))
+#dev.off()
+
+lapply_results_pca_CYP2D6_probe <- do.call(rbind,results_by_probe("CYP2D6:ENSG00000100197.16"))
+toPlot_lapply_results_pca_CYP2D6_probe  <- lapply_results_pca_CYP2D6_probe  %>% melt(id="num_PC")
+
+#png("/Users/lisa/STAT540/Repo_team_gene_heroes/images/Step 2/gene_CYP2D6_probe.png")
+ggplot(aes(x=num_PC, y=value, colour=variable), data = toPlot_lapply_results_pca_CYP2D6_probe) + geom_point() + geom_line( ) + ggtitle("Number of significant eQTMs on CYP2D6 when probe data adjusted for 5 PCs") + xlab("Number of PCs") + ylab("Number of significant DNA probes") + scale_colour_discrete(name = "Type of Threshold", breaks=c("num_less_pvalue", "num_less_fdr", "num_less_bonferroni"), labels=c("P-value < 0.1", "FDR < 0.1", "Bonferroni < 0.1"))
+#dev.off()
 ```
 
 ##C21orf56- a gene that contains multiple significant probes 
 
 ```{r}
-lapply_results_pca_C21orf56 <- do.call(rbind,results_by_gene("C21orf56:ENSG00000160284.10"))
-toPlot_lapply_results_pca_C21orf56 <- lapply_results_pca_C21orf56 %>% melt(id="num_PC")
+lapply_results_pca_C21orf56_gdata <- do.call(rbind,results_by_gene("C21orf56:ENSG00000160284.10"))
+toPlot_lapply_results_pca_C21orf56_gdata  <- lapply_results_pca_C21orf56_gdata  %>% melt(id="num_PC")
 
-png("gene_C21orf56.png")
-ggplot(aes(x=num_PC, y=value, colour=variable), data = toPlot_lapply_results_pca_C21orf56) + geom_point() + geom_line( ) + ggtitle("Number of significant eQTMs by number of PCs for C21orf56") + xlab("Number of PCs") + ylab("Number of significant DNA probes") + scale_colour_discrete(name = "Type of Threshold", breaks=c("num_less_pvalue", "num_less_fdr", "num_less_bonferroni"), labels=c("P-value < 0.1", "FDR < 0.1", "Bonferroni < 0.1"))
-dev.off()
+#png("/Users/lisa/STAT540/Repo_team_gene_heroes/images/Step 2/gene_C21orf56_gdata.png")
+ggplot(aes(x=num_PC, y=value, colour=variable), data = toPlot_lapply_results_pca_C21orf56_gdata) + geom_point() + geom_line( ) + ggtitle("Number of significant eQTMs on C21orf56 when gene data adjusted for 30 PCs") + xlab("Number of PCs") + ylab("Number of significant DNA probes") + scale_colour_discrete(name = "Type of Threshold", breaks=c("num_less_pvalue", "num_less_fdr", "num_less_bonferroni"), labels=c("P-value < 0.1", "FDR < 0.1", "Bonferroni < 0.1"))
+#dev.off()
+
+lapply_results_pca_C21orf56_probe <- do.call(rbind,results_by_probe("C21orf56:ENSG00000160284.10"))
+toPlot_lapply_results_pca_C21orf56_probe  <- lapply_results_pca_C21orf56_probe  %>% melt(id="num_PC")
+
+#png("/Users/lisa/STAT540/Repo_team_gene_heroes/images/Step 2/gene_C21orf56_probes.png")
+ggplot(aes(x=num_PC, y=value, colour=variable), data = toPlot_lapply_results_pca_C21orf56_probe) + geom_point() + geom_line( ) + ggtitle("Number of significant eQTMs on C21orf56 when probe data adjusted for 5 PCs") + xlab("Number of PCs") + ylab("Number of significant DNA probes") + scale_colour_discrete(name = "Type of Threshold", breaks=c("num_less_pvalue", "num_less_fdr", "num_less_bonferroni"), labels=c("P-value < 0.1", "FDR < 0.1", "Bonferroni < 0.1"))
+#dev.off()
+
 ```
+Here, you can see clearly how the number of PCs adjusted affects the number of significant probes by individual genes. For example, it seems that the number of PCs adjusted in probes does not affect the number of significances. This observation corresponds to the cumulative variance explained that was illustrated above - over 90% of variability was explained on the first PC. In the same gene for the second graph which looks at the number of PCs adjusted in genes affect a lot more especially between 20 to 30 PCs.
 
 
